<resources>
    <string name="app_name">Luxury Car</string>
    <string name="facebook_app_id">1057734138461125</string>
    <string name="fb_login_protocol_scheme">fb1057734138461125</string>
    <string name="facebook_client_token">2fc78b08581641dcd42a0c13d9553119</string>
    <string name="app_exit">Exit</string>
    <string name="title_ok">OK</string>
    <string name="title_cancel">Cancel</string>
    <string name="title_activity_company">CompanyActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_register"> <u>Register</u></string>
    <string name="letsRegister_title">Let"'"s Register</string>
    <string name="letsLogin_title">Let"'"s Register</string>
    <string name="register_page_message">By Register your account, you will be able to access your account</string>
    <string name="error_empty_first_name">Please enter first name.</string>
    <string name="error_empty_select_country">Please select country.</string>
    <string name="error_empty_select_city">Please select city.</string>
    <string name="error_empty_select_state">Please select state.</string>
    <string name="error_empty_last_name">Please enter last name.</string>
    <string name="error_empty_country_name">Please enter country name.</string>
    <string name="error_empty_state_name">Please enter state name.</string>
    <string name="error_empty_city_name">Please enter city name.</string>
    <string name="error_empty_email">Please enter email.</string>
    <string name="error_empty_mobile_no">Please enter mobile no.</string>
    <string name="error_empty_phone_no">Please enter phone number.</string>
    <string name="error_empty_company_name">Please enter company name.</string>
    <string name="error_empty_enter_your_message">Please enter your message.</string>
    <string name="error_empty_enter_price">Please enter price.</string>
    <string name="error_empty_enter_subject">Please enter subject.</string>
    <string name="error_empty_address">Please enter address.</string>
    <string name="error_empty_phone_number">Please enter phone number.</string>
    <string name="error_empty_valid_number">Please enter valid phone number.</string>
    <string name="error_invalid_email">Please enter valid email.</string>
    <string name="error_empty_password">Please enter password.</string>
    <string name="error_empty_new_password">Please enter your new password.</string>
    <string name="error_empty_old_password">Please enter old Password.</string>
    <string name="error_empty_confirm_password">Please enter confirm password.</string>
    <string name="error_password_not_match">Please enter the same  password.</string>
    <string name="error_empty_description">Please enter your message.</string>
    <string name="error_empty_city">Please select the city.</string>
    <string name="error_empty_make">Please select the make.</string>
    <string name="error_empty_car_model">Please select the model.</string>
    <string name="error_empty_year">Please select the year.</string>
    <string name="error_empty_kilometers">Please select the kilometers.</string>
    <string name="error_empty_price">Please select the price.</string>
    <string name="error_empty_deposit">Please select the deposit price.</string>
    <string name="error_empty_daily_price">Please select the daily price.</string>
    <string name="error_empty_regional_specification">Please select the regional specification.</string>
    <string name="error_empty_weekly_price">Please select the weekly price.</string>
    <string name="error_empty_monthly_price">Please select the monthly price.</string>
    <string name="error_empty_exteriour_colour">Please select the exteriour colour.</string>
    <string name="error_empty_transmission_type">Please select the transmission type.</string>
    <string name="error_empty_horse_power">Please select the horse power.</string>
    <string name="error_empty_seller_type">Please select the seller type.</string>
    <string name="error_empty_full_service_history">Please select the full serive history.</string>
    <string name="error_empty_title">Please enter the title.</string>
    <string name="error_empty_description_message">Please enter the description.</string>
    <string name="error_subject_message">Please enter the subject.</string>
    <string name="titlr_login">Login</string>
    <string name="titlr_login_underline"> <u>Login</u></string>
    <string name="title_email">Email</string>
    <string name="title_password">Enter Password</string>
    <string name="please_enter_your_login_details">Please Enter Your Login Details</string>
    <string name="title_forgot_password">Forgot Password?</string>
    <string name="johndeo_hotmail_com">johndeo@hotmail.com</string>
    <string name="str_password">********</string>
    <string name="don_t_have_an_account">Don\'t have an account ? </string>
    <string name="or">Or</string>
    <string name="str_enter_otp">Enter Your OTP Code Here</string>
    <string name="str_dont_receive_code">Didn"'"t receive any code </string>
    <string name="str_resend_code_no_underline">Resend a new code.</string>
    <string name="str_resend_code"><u>Resend a new code.</u></string>
    <string name="camera_setting">Please provide Camera permission from app setting.</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="home_fragment">Home</string>
    <string name="contact_fragment">Contact Us</string>
    <string name="follow_us_fragment">Follow Us</string>
    <string name="menu_aboutus">About Us</string>
    <string name="menu_car_listing">Car Listings</string>
    <string name="menu_transport">Transport/Export</string>
    <string name="menu_soucing">Sourcing</string>
    <string name="menu_Inspecting">Inspecting</string>
    <string name="menu_sellur_car">Sell your Car</string>
    <string name="str_more_options"><u>More Options +</u></string>
    <string name="str_less_options"><u>Less Options -</u></string>
    <string name="exquisite_cars_for_exquisite_peaople">Exquisite Cars For \n Exquisite People</string>
    <string name="view_profile">View Profile</string>
    <string name="language">Language</string>
    <string name="terms_condition">Terms &amp; Condition</string>
    <string name="logout">Logout</string>
    <string name="title_storage">Storage</string>
    <string name="title_to_buy">To Buy</string>
    <string name="title_to_rent">To Rent</string>
    <string name="title_select_make">Select Make</string>
    <string name="title_select_model">Select Model</string>
    <string name="title_year_from">Year From</string>
    <string name="title_year_to">Year To</string>
    <string name="title_price_from">Price From</string>
    <string name="title_price_to">Price To</string>
    <string name="title_search">Search</string>
    <string name="title_car_listing">Car listing</string>
    <string name="str_sort_by">Sort by</string>
    <string name="str_featured">Featured</string>
    <string name="str_chevrolet_camaroerui">Chevrolet Camaroerui</string>
    <string name="str_year">2019</string>
    <string name="str_kilometer">49000 KM</string>
    <string name="str_aed_168_000">AED 168,000</string>
    <string name="titlr_enquire">Enquire</string>
    <string name="str_what_s_included">What\'s Included?</string>
    <string name="str_engine_starts">Engine Starts</string>
    <string name="str_anti_flat_spot_management">Anti-Flat Spot Management</string>
    <string name="str_insurance">Insurance</string>
    <string name="str_battery_trickle_vharging">Battery Trickle Charging</string>
    <string name="str_interior_preparation_and_sanitization">Interior Preparation and Sanitization</string>
    <string name="str_tire_rotation_and_checks"><![CDATA[Tire Rotation & Checks]]></string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="title_inspecting">Inspecting</string>
    <string name="str_view_sample_report"><u>View Sample Report</u></string>
    <string name="str_transport_export">Transport/ Export</string>
    <string name="str_pay_now">Pay Now</string>
    <string name="only_299_for_our_full_service">Only $299 for our full service</string>
    <string name="str_contact_us_about_your_transport_export_requirements">Contact us about your transport/export requirements</string>
    <string name="str_destination_country">Destination country.*</string>
    <string name="str_number_of_cars_to_export">Number of cars to export</string>
    <string name="str_car_links">Car Links.*</string>
    <string name="str_first_name">First Name</string>
    <string name="str_last_name">Last Name</string>
    <string name="str_email">Email.*</string>
    <string name="str_phone">Phone no.</string>
    <string name="str_get_free_quote">Get Free Quote</string>
    <string name="str_transport_export_faq_s">Transport/Export FAQ\'S</string>
    <string name="str_put_simply_car_sourcing_is_you_the_buyer_commissioning_us_the_seller_to_locate_prepare_and_supply_you_next_luxury_car">Put simply,car sourcing is you (the buyer) commissioning us (the seller) to locate,prepare and supply you next luxury car.</string>
    <string name="str_my_profile">My Profile</string>
    <string name="str_save_my_details">Save My Details</string>
    <string name="str_please_enter_your_first_name">Please enter your first name</string>
    <string name="str_please_enter_your_last_name">Please enter your last name.</string>
    <string name="str_please_enter_your_email">Please enter your email</string>
    <string name="str_please_enter_your_mobile_number">Please enter your mobile number</string>
    <string name="str_mobile_number">Mobile Number</string>
    <string name="str_please_enter_password">Please enter password</string>
    <string name="str_change_password">Change Password</string>
    <string name="str_youtube">youtube</string>
    <string name="str_linkedlin">linkedlin</string>
    <string name="str_instagram">instagram</string>
    <string name="str_facebook">facebook</string>
    <string name="str_camera">Camera</string>
    <string name="str_gallery">Gallery</string>
    <string name="str_sign_up_as_a_seller">Sign Up as a Seller</string>
    <string name="str_please_enter_your_sign_up_details">Please enter your sign up details</string>
    <string name="tirle_confirm_password">Confirm Password</string>
    <string name="title_submit">Submit</string>
    <string name="str_53">53</string>
    <string name="str_for_rent">For rent</string>
    <string name="str_30">30</string>
    <string name="str_for_sale">For sale</string>
    <string name="str_update_password">Update Password</string>
    <string name="str_new_password">New Password</string>
    <string name="str_please_enter_new_password">Please enter new password</string>
    <string name="str_please_enter_confirm_password">Please enter confirm password</string>
    <string name="str_first_choice_garage">First Choice Garage</string>
    <string name="title_head_office">HEAD OFFICE</string>
    <string name="str_dubai">Dubai</string>
    <string name="str_step">Step</string>
    <string name="str_1">1</string>
    <string name="str_find_a_car">Find a Car</string>
    <string name="str_select_your_car_s_from_our_listing_or_from_any_other_website_and_provide_our_team_with_the_url_link">Select your car/s from our listing or from any other website and provide our team with the URL link.</string>
</resources>