<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/grp1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profiles"
            android:icon="@drawable/ic_arrow_back"
            android:title="@string/view_profile"
             />
    </group>
    <group
        android:id="@+id/grp2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_language"
            android:icon="@drawable/ic_arrow_back"
            android:title="@string/language" />
    </group>
    <group
        android:id="@+id/grp3"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_condition"
            android:icon="@drawable/ic_arrow_back"
            android:title="@string/terms_condition" />
    </group>
    <group
        android:id="@+id/grp4"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_arrow_back"
            android:title="@string/logout" />

    </group>
</menu>