<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/grp1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_sellerProfileFragment"
            android:icon="@drawable/ic_arrow_back"
            android:title="@string/view_profile"

            />
    </group>


    <group
        android:id="@+id/grp2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_change_password"
            android:icon="@drawable/ic_arrow_back"
            android:title="@string/str_change_password" />
    </group>

    <group
        android:id="@+id/grp3"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_arrow_back"
            android:title="@string/logout" />

    </group>
</menu>