<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/nav_grp1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/ic_arrow_back"
            android:checkable="true"
            android:title="@string/menu_aboutus" />
    </group>
    <group
        android:id="@+id/nav_grp2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_car_listing"
            android:icon="@drawable/ic_arrow_back"
            android:checkable="true"
            android:title="@string/menu_car_listing" />
    </group>
    <group
        android:id="@+id/nav_grp3"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_transport"
            android:icon="@drawable/ic_arrow_back"
            android:checkable="true"
            android:title="@string/menu_transport" />
    </group>
    <group
        android:id="@+id/nav_grp4"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_sourcing"
            android:icon="@drawable/ic_arrow_back"
            android:checkable="true"
            android:title="@string/menu_soucing" />
    </group>

    <group
        android:id="@+id/nav_grp5"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_inspecting"
            android:icon="@drawable/ic_arrow_back"
            android:checkable="true"
            android:title="@string/menu_Inspecting" />
    </group>

    <group
        android:id="@+id/nav_grp8"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_find_Garages"
            android:icon="@drawable/ic_arrow_back"
            android:checkable="true"
            android:title="Find Garages" />
    </group>
    <group
        android:id="@+id/nav_grp11"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_storage"
            android:icon="@drawable/ic_arrow_back"
            android:checkable="true"
            android:title="storage" />
    </group>
    <group
        android:id="@+id/nav_grp10"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_advertiseWithUsFragment"
            android:icon="@drawable/ic_arrow_back"
            android:checkable="true"
            android:title="Advertise With Us" />
    </group>


  <!--  <group
        android:id="@+id/nav_grp7"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_saurce_my_car"
            android:icon="@drawable/ic_arrow_back"
            android:checkable="true"
            android:title="Saurce my car" />
    </group>-->


</menu>