<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin_15_dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".code_files.ui.auth.fragment.UpdatePasswordFragment">

    <ImageView
        android:id="@+id/imgViewLogo"
        android:layout_width="@dimen/margin_100_dp"
        android:layout_height="@dimen/margin_100_dp"
        android:layout_marginTop="@dimen/margin_30_dp"
        android:contentDescription="@string/app_name"
        android:src="@mipmap/ic_main_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtViewTitleUpdatePassword"
        style="@style/TextViewHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10_dp"
        android:fontFamily="@font/muli_bold"
        android:text="@string/str_update_password"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgViewLogo" />


    <TextView
        android:id="@+id/txtViewNewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_25_dp"
        android:fontFamily="@font/muli_bold"
        android:text="@string/str_new_password"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtViewTitleUpdatePassword" />

    <EditText
        android:id="@+id/edtTextNewPassword"
        style="@style/EditTextField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:gravity="center_vertical"
        android:paddingEnd="40dp"
        android:textColorHint="@color/sub_title_color"
        android:hint="@string/str_please_enter_new_password"
        android:imeOptions="actionNext"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtViewNewPassword" />

    <ImageView
        android:id="@+id/imgViewEyeNewPassword"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:padding="10dp"
        android:layout_marginEnd="5dp"
        android:src="@mipmap/ic_hide_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/edtTextNewPassword"
        app:layout_constraintBottom_toBottomOf="@id/edtTextNewPassword"
        />

    <View
        android:id="@+id/viewBeloNewPassword"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/view_color"
        android:layout_marginTop="@dimen/margin_10_dp"
        app:layout_constraintEnd_toEndOf="@+id/edtTextNewPassword"
        app:layout_constraintStart_toStartOf="@+id/edtTextNewPassword"
        app:layout_constraintTop_toBottomOf="@+id/edtTextNewPassword" />


    <TextView
        android:id="@+id/txtViewConfirnPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/muli_bold"
        android:text="@string/tirle_confirm_password"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:autoSizeStepGranularity="2sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewBeloNewPassword" />

    <EditText
        android:id="@+id/edtTextConfirnPassword"
        style="@style/EditTextField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:gravity="center_vertical"
        android:paddingEnd="40dp"
        android:textColorHint="@color/sub_title_color"
        android:hint="@string/str_please_enter_confirm_password"
        android:inputType="textPassword"
        android:imeOptions="actionDone"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtViewConfirnPassword" />

    <ImageView
        android:id="@+id/imgViewEyeConfirmPassword"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:padding="10dp"
        android:layout_marginEnd="5dp"
        android:src="@mipmap/ic_hide_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/edtTextConfirnPassword"
        app:layout_constraintBottom_toBottomOf="@id/edtTextConfirnPassword"
        />

    <View
        android:id="@+id/viewBeloConfirmPassword"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/view_color"
        android:layout_marginTop="@dimen/margin_10_dp"
        app:layout_constraintEnd_toEndOf="@+id/edtTextConfirnPassword"
        app:layout_constraintStart_toStartOf="@+id/edtTextConfirnPassword"
        app:layout_constraintTop_toBottomOf="@+id/edtTextConfirnPassword" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSubmit"
        style="@style/buttonFieldStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_25_dp"
        android:text="@string/title_submit"
        android:textAllCaps="true"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewBeloConfirmPassword"
        app:rippleColor="@color/white" />


    <ProgressBar
        android:id="@+id/progressBarUpdatePasswordPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>