<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="@dimen/margin_5dp"
    android:paddingBottom="@dimen/margin_5dp">

    <LinearLayout
        android:id="@+id/linLayoutStep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/drawable_background_circle_shape">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_13dp"
            android:layout_marginTop="@dimen/margin_12_dp"
            android:layout_marginEnd="@dimen/margin_13dp"
            android:layout_marginBottom="@dimen/margin_12_dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtViewStep"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/muli_semi_bold"
                android:text="@string/str_step"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/margin_14sp" />

            <TextView
                android:id="@+id/txtViewNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/muli_semi_bold"
                android:text="@string/str_1"
                android:textColor="@color/white"
                android:textSize="@dimen/margin_14sp" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linLayoutFindACar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/linLayoutStep"
        android:layout_alignBottom="@id/linLayoutStep"
        android:layout_marginStart="@dimen/margin_15_dp"
        android:layout_toRightOf="@+id/linLayoutStep">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgViewCar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_2dp"
                app:tint="@color/green"
                android:layout_gravity="center_horizontal"
                android:src="@mipmap/ic_find_a_car"
                android:scaleType="centerCrop"/>

            <TextView
                android:id="@+id/txtViewTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_5dp"
                android:fontFamily="@font/muli_semi_bold"
                android:text="@string/str_find_a_car"
                android:textColor="@color/black"
                android:textSize="@dimen/margin_14sp" />
        </LinearLayout>


    </LinearLayout>

    <TextView
        android:id="@+id/txtViewDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linLayoutFindACar"
        android:layout_marginTop="@dimen/margin_5dp"
        android:fontFamily="@font/muli_semi_bold"
        android:text="@string/str_select_your_car_s_from_our_listing_or_from_any_other_website_and_provide_our_team_with_the_url_link"
        android:textColor="@color/description_color"
        android:textSize="@dimen/margin_13dp" />

</RelativeLayout>